--- a/src/add.html
+++ b/src/add.html
@@ -15,6 +15,10 @@
     <h1 class="text-center mb-4 text-success">Add Expense</h1>
     <form id="add-expense-form">
       <div class="mb-3">
+        <label for="date" class="form-label">Date</label>
+        <input type="date" class="form-control" id="date" required>
+      </div>
+      <div class="mb-3">
         <label for="amount" class="form-label">Amount</label>
         <input type="number" class="form-control" id="amount" placeholder="Enter amount" required>
       </div>
@@ -64,12 +68,13 @@
     form.addEventListener("submit", function(e) {
       e.preventDefault();
 
+      const date = document.getElementById("date").value;
       const amount = parseFloat(document.getElementById("amount").value);
       const title = document.getElementById("title").value;
       const description = document.getElementById("description").value || "";
       const type = document.getElementById("type").value;
 
-      const newExpense = { amount, title, description, type };
+      const newExpense = { date, amount, title, description, type };
 
       // Retrieve existing expenses from local storage
       const expenses = JSON.parse(localStorage.getItem("expenses")) || [];
