--- a/src/summary.html
+++ b/src/summary.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Summary</title>
+  <title>Expense Summary</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     .expense-list {
@@ -20,82 +21,110 @@
     <div class="back-button mb-3">
       <a href="index.html" class="btn btn-secondary">&larr; Back</a>
     </div>
-    <h1 class="text-center mb-4 text-info">Summary</h1>
-    <canvas id="expenseChart" class="mt-4"></canvas>
-    <ul class="list-group mt-4" id="expenseList"></ul>
+    <h1 class="text-center mb-4 text-success">Expense Summary</h1>
+    <div class="mb-3">
+      <label for="month" class="form-label">Select Month</label>
+      <input type="month" class="form-control" id="month" required>
+    </div>
+    <canvas id="expenseChart" width="400" height="400"></canvas>
+    <ul id="expenseList" class="list-group mt-4"></ul>
   </div>
 
   <script>
-    const expenses = JSON.parse(localStorage.getItem("expenses")) || [];
-
-    const expenseTotals = {
-      Food: 0,
-      Clothes: 0,
-      Entertainment: 0,
-      Groceries: 0,
-      Rental: 0,
-      Transport: 0,
-      Other: 0
-    };
-
-    expenses.forEach(expense => {
-      expenseTotals[expense.type] += parseFloat(expense.amount);
-    });
-
-    // Create a pie chart with the calculated totals
-    const ctx = document.getElementById('expenseChart').getContext('2d');
-    const expenseChart = new Chart(ctx, {
-      type: 'pie',
-      data: {
-        labels: Object.keys(expenseTotals),
-        datasets: [{
-          data: Object.values(expenseTotals),
-          backgroundColor: [
-            '#FF6384', // Food
-            '#36A2EB', // Clothes
-            '#FFCE56', // Entertainment
-            '#8E44AD', // Groceries
-            '#27AE60', // Rental
-            '#F39C12',  // Transport
-            '#4BC0C0' // Other
-          ]
-        }]
-      },
-      options: {
-        plugins: {
-          legend: {
-            display: true,
-            position: 'bottom',
-          }
-        },
-        onClick: (e, element) => {
-          if (element.length > 0) {
-            const index = element[0].index;
-            const type = expenseChart.data.labels[index];
-            showExpensesByType(type);
-          }
+    let expenses = [];
+  
+    document.getElementById('month').addEventListener('change', function () {
+      const selectedMonth = this.value; // Get the selected month (YYYY-MM format)
+      expenses = JSON.parse(localStorage.getItem('expenses')) || []; // Load expenses from localStorage
+  
+      // Initialize totals for each expense type
+      const expenseTotals = {
+        Food: 0,
+        Clothes: 0,
+        Entertainment: 0,
+        Groceries: 0,
+        Rental: 0,
+        Transport: 0,
+        Other: 0
+      };
+  
+      // Filter expenses based on the selected month
+      expenses.forEach(expense => {
+        const expenseDate = new Date(expense.date);
+        const expenseMonth = expenseDate.toISOString().slice(0, 7); // Extract YYYY-MM from the date
+        if (expenseMonth === selectedMonth) {
+          expenseTotals[expense.type] += parseFloat(expense.amount); // Add amount to the corresponding type
         }
+      });
+  
+      // Debug: Log the filtered totals
+      console.log("Filtered Totals:", expenseTotals);
+      
+      if (window.expenseChart && typeof window.expenseChart.destroy === 'function') {
+    window.expenseChart.destroy();
+  }
+      // Create or update the pie chart with the calculated totals
+      const ctx = document.getElementById('expenseChart').getContext('2d');
+  
+        // Create a new chart if it doesn't exist
+        window.expenseChart = new Chart(ctx, {
+          type: 'pie',
+          data: {
+            labels: Object.keys(expenseTotals), // Expense categories
+            datasets: [{
+              data: Object.values(expenseTotals), // Total amounts for each category
+              backgroundColor: [
+                '#FF6384', // Food
+                '#36A2EB', // Clothes
+                '#FFCE56', // Entertainment
+                '#8E44AD', // Groceries
+                '#27AE60', // Rental
+                '#F39C12', // Transport
+                '#4BC0C0'  // Other
+              ]
+            }]
+          },
+          options: {
+            plugins: {
+              legend: {
+                display: true,
+                position: 'bottom',
+              }
+            },
+            onClick: (e, element) => {
+              if (element.length > 0) {
+                const index = element[0].index;
+                const type = window.expenseChart.data.labels[index];
+                showExpensesByType(type);
+              }
+            }
+          }
+        });
       }
-    });
-
+    );
+  
     // Function to display the list of expenses for a selected type
     function showExpensesByType(type) {
       const expenseList = document.getElementById("expenseList");
       expenseList.innerHTML = ""; // Clear existing list
-
+  
+      // Filter expenses based on the selected type
       const filteredExpenses = expenses.filter(expense => expense.type === type);
-
+  
       if (filteredExpenses.length > 0) {
+        // Display each expense
         filteredExpenses.forEach(expense => {
           const listItem = document.createElement("li");
           listItem.classList.add("list-group-item");
           listItem.innerHTML = `
             <strong>${expense.title}</strong>: RM${parseFloat(expense.amount).toFixed(2)}<br>
-            <small>${expense.description || "No description"}</small>
+            <small>${expense.description || "No description"} <br>
+            Date: ${expense.date}</small>
           `;
           expenseList.appendChild(listItem);
         });
       } else {
+        // Display a message if no expenses are found for the selected type
         const noExpenseItem = document.createElement("li");
         noExpenseItem.classList.add("list-group-item", "text-muted");
         noExpenseItem.textContent = `No expenses found for ${type}.`;
@@ -103,5 +132,6 @@
       }
     }
   </script>
+  
 </body>
 </html>
