--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
       document.getElementById("total-amount").innerText = `Total Expenses: RM${total.toFixed(2)}`;
     }
 
-    // Call function on page load
+    // Call function
     calculateTotal();
   </script>
 </body>
