--- a/src/add.html
+++ b/src/add.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container mt-4">
     <div class="back-button mb-3">
-      <a href="index.html" class="btn btn-secondary">&larr; Back</a>
+      <a href="dashboard.html" class="btn btn-secondary">&larr; Back</a>
     </div>
     <h1 class="text-center mb-4 text-success">Add Expense</h1>
     <form id="add-expense-form">
