--- a/src/edit.html
+++ b/src/edit.html
@@ -25,7 +25,7 @@
 <body>
   <div class="container mt-4">
     <div class="back-button mb-3">
-      <a href="index.html" class="btn btn-secondary">&larr; Back</a>
+      <a href="dashboard.html" class="btn btn-secondary">&larr; Back</a>
     </div>
     <h1 class="text-center text-primary">Edit Expenses</h1>
     <div id="expense-list" class="mt-4"></div>
