--- a/src/summary.html
+++ b/src/summary.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container mt-4">
     <div class="back-button mb-3">
-      <a href="index.html" class="btn btn-secondary">&larr; Back</a>
+      <a href="dashboard.html" class="btn btn-secondary">&larr; Back</a>
     </div>
     <h1 class="text-center mb-4 text-success">Expense Summary</h1>
     <div class="mb-3">
