--- a/src/add.html
+++ b/src/add.html
@@ -6,6 +6,16 @@
   <title>Add Expense</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: lightyellow;
+    }
+
+    .back-button {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
   <div class="container mt-4">
