--- a/src/edit.html
+++ b/src/edit.html
@@ -6,18 +6,27 @@
   <title>Edit Expenses</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
   <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: lightyellow;
+    }
+
     .expense-row {
       border-bottom: 1px solid #ccc;
       padding: 10px 0;
     }
+
     .back-button {
       margin-top: 20px;
     }
+
     .edit-section {
       display: none;
       margin-top: 10px;
     }
-    .btn-edit, .btn-delete {
+
+    .btn-edit,
+    .btn-delete {
       margin-right: 5px;
     }
   </style>
